--- a/charts/hello-akka/values.yaml
+++ b/charts/hello-akka/values.yaml
@@ -1,9 +1,8 @@
 image:
-  repository: hub.pmdr.net:5000/hello-akka
+  repository: 'hub.pmdr.net:5000/hello-akka'
   tag: 'c1e7bae3566'
-container:
-  env:
-    host: 0.0.0.0
-    port: 8080
-    xmx: 512M
-    xms: 512M
+env:
+  host: '0.0.0.0'
+  port: '8080'
+  xmx: '512M'
+  xms: '512M'
