--- a/charts/hello-akka/templates/deployment.yaml
+++ b/charts/hello-akka/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           - name: SERVER_HOST
             value: {{ .Values.env.host }}
           - name: SERVER_PORT
-            value: {{ .Values.env.port }}
+            value: "{{ .Values.env.port }}"
           - name: xmx
             value: {{ .Values.env.xmx }}
           - name: xms
