--- a/charts/hello-akka/templates/service.yaml
+++ b/charts/hello-akka/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "hello-akka.full_name" . }}
+  name: "{{ template 'hello-akka.full_name' . }}"
   labels:
     {{- include "hello-akka.release_labels" . | indent 4 }}
 spec:
@@ -11,4 +11,4 @@ spec:
     targetPort: 8080
     protocol: TCP
   selector:
-    app: {{ template "hello-akka.full_name" . }}
+    app: "{{ template 'hello-akka.full_name' . }}"
